--- a/huu-ich/cac-loai-bao-hiem-3.html
+++ b/huu-ich/cac-loai-bao-hiem-3.html
@@ -167,8 +167,8 @@ div.footer { font-size: 80%; color: red; text-align: center; }
                 <span></span>
             </button>
   <h3 class="myheader"><a href='/'>Giới-thiệu</a></h3>
-    <a href='/home/about.html'>Thân-thế</a><br>
-    <a href='/home/cv.html'>Thành-tích</a><br>
+    <a href='/home/about'>Thân-thế</a><br>
+    <a href='/home/cv'>Thành-tích</a><br>
   <h3 class="myheader"><a href='/huu-ich/'>Hữu-ích</a></h3>
 
       <h4 class="myheader"><a href='/huu-ich/ke-hoach-tai-chinh/'>Lập-kế-hoạch-tài-chính</a></h4>
@@ -190,7 +190,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 
   <h3 class="myheader">Danh mục</h3>
     <a href='/download/'>Download</a><br>
-    <a href='/sitemap.html'>Mục lục</a>
+    <a href='/sitemap'>Mục lục</a>
   <h3 class="myheader"></h3>
   <br>
   <br>
@@ -334,7 +334,7 @@ Bạn có muốn để lại nỗi đau cho người thân yêu của mình khô
     layout="responsive"
     width="560" height="315"></amp-youtube>
 </div>
-<div class="center">sang trang <a href="cac-loai-bao-hiem/">1</a> - <a href="cac-loai-bao-hiem-2.html">2</a> - 3</div>
+<div class="center">sang trang <a href="cac-loai-bao-hiem/">1</a> - <a href="cac-loai-bao-hiem-2">2</a> - 3</div>
 <div class="todiscuss">
 Mọi ý kiến thảo luận xin ghi vào các trang: <a href="https://twitter.com/GiauCham/status/1132804613009051648" target="_blank">Twitter</a> hoặc <a href="https://www.facebook.com/lamgiauchacchan/posts/376045612561053" rel="nofollow" target="_blank">Facebook</a>
 </div>
