--- a/huu-ich/cach-dau-tu.html
+++ b/huu-ich/cach-dau-tu.html
@@ -166,8 +166,8 @@ div.footer { font-size: 80%; color: red; text-align: center; }
                 <span></span>
             </button>
   <h3 class="myheader"><a href='/'>Giới-thiệu</a></h3>
-    <a href='/home/about.html'>Thân-thế</a><br>
-    <a href='/home/cv.html'>Thành-tích</a><br>
+    <a href='/home/about'>Thân-thế</a><br>
+    <a href='/home/cv'>Thành-tích</a><br>
   <h3 class="myheader"><a href='/huu-ich/'>Hữu-ích</a></h3>
 
       <h4 class="myheader"><a href='/huu-ich/ke-hoach-tai-chinh/'>Lập-kế-hoạch-tài-chính</a></h4>
@@ -189,7 +189,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 
   <h3 class="myheader">Danh mục</h3>
     <a href='/download/'>Download</a><br>
-    <a href='/sitemap.html'>Mục lục</a>
+    <a href='/sitemap'>Mục lục</a>
   <h3 class="myheader"></h3>
   <br>
   <br>
@@ -257,7 +257,7 @@ https://www.lhboi.name.vn/huu-ich/cach-dau-tu
     <dd>hùn vốn vào một doanh nghiệp đang hoạt động. Nếu doanh nghiệp đó là công ty cổ phần thì vốn được quy ra thành các cổ phiếu. Nếu cổ phiếu đó được niêm yết trên thị trường chứng khoán thì người đầu tư có thể chọn mua cổ phiếu và bán cổ phiếu dễ dàng.</dd>
     <dt><b>Uỷ thác đầu tư</b></dt>
     <dd>nhiều người muốn đầu tư gián tiếp nhưng không biết nên đầu tư vào doanh nghiệp nào thì có thể nhờ các tổ chức tài chính. Hợp đồng uỷ thác đầu tư thường có kỳ hạn một vài năm, bên có tiền sẽ nhận được lợi nhuận cao hơn hoặc bằng lãi suất tiết kiệm ở ngân hàng, ngoài lợi nhuận cam kết đó, nếu việc đầu tư sinh lợi nhiều thì khoản lợi hơn dự kiến đó sẽ được chia giữa bên có tiền và tổ chức thực hiện đầu tư. Lợi nhuận được trả hàng năm, không thể chấm dứt hợp đồng rút vốn trước hạn.</dd>
-    <dt><b><a href="dau-tu-co-phieu/quy-dau-tu.html">Quỹ đầu tư</a></b></dt>
+    <dt><b><a href="dau-tu-co-phieu/quy-dau-tu">Quỹ đầu tư</a></b></dt>
     <dd>Những tổ chức tài chính có vốn và biết đầu tư nhưng muốn tăng số vốn lên nhiều lần để có cơ hội đầu tư tốt hơn sẽ lập quỹ đầu tư. Tiền góp vào quỹ đầu tư được quy thành các đơn vị quỹ giống như cổ phiếu. Những người muốn đầu tư gián tiếp nhưng không biết nên đầu tư vào doanh nghiệp nào và không muốn bị ràng buộc thời hạn uỷ thác đầu tư thì có thể mua đơn vị quỹ. Quỹ đầu tư không chia lãi như uỷ thác đầu tư, lợi nhuận của quỹ đầu tư thể hiện qua sự tăng giá của đơn vị quỹ. Người sở hữu đơn vị quỹ có thể bán đơn vị quỹ để lấy tiền bất kỳ lúc nào.</dd>
   </dl>
 <!-- AMP In-article 1 -->
@@ -295,7 +295,7 @@ data-ad-slot="3830899615">
     </ul>
     Ban đầu mọi người đều phải đi làm để có tiền. Khi để dành được một số tiền thì có người đầu tư trực tiếp, có người đầu tư gián tiếp để đến một lúc nào đó không cần phải đi làm nữa. Tuỳ theo khả năng mà người ta nên đầu tư trực tiếp hay đầu tư gián tiếp. Nếu mát tay trồng nấm thì tự trồng, ngược lại thì đem rơm đi gửi. Chắc chắn một điều là người nào cũng sẽ đến tuổi không thể tự đi hái nấm hay trồng nấm, phải ăn nấm do người khác làm ra, do đó ai cũng cần phải có rơm đi gửi.
   </div>
-  <p>Phần lớn những người tôi đã tiếp xúc đều chỉ nghĩ đến một loại đầu tư là đầu tư trực tiếp và luôn luôn lo ngại đưa tiền cho một tổ chức khác sinh lợi (trừ ngân hàng). Đó là một quan niệm khá cũ, không còn thích hợp với xã hội hiện đại. Thật ra mọi người đều có thể bắt đầu đầu tư gián tiếp một cách dễ dàng như được giải thích trong bài <a href="dung-so-dau-tu.html">Đừng sợ chữ đầu tư</a>.
+  <p>Phần lớn những người tôi đã tiếp xúc đều chỉ nghĩ đến một loại đầu tư là đầu tư trực tiếp và luôn luôn lo ngại đưa tiền cho một tổ chức khác sinh lợi (trừ ngân hàng). Đó là một quan niệm khá cũ, không còn thích hợp với xã hội hiện đại. Thật ra mọi người đều có thể bắt đầu đầu tư gián tiếp một cách dễ dàng như được giải thích trong bài <a href="dung-so-dau-tu">Đừng sợ chữ đầu tư</a>.
   <br>Trước khi đưa tiền cho tổ chức nào đó thì nên tìm hiểu về mức độ ổn định tài chính của tổ chức đó. Để biết được mức độ ổn định tài chính của một tổ chức (ngân hàng hay công ty quản lý quỹ) thì phải tìm xem tổ chức đó được đánh giá như thế nào bởi các cơ quan độc lập như là Fitch, Moody's, Standard and Poor. Điều quan trọng nhất không phải là lời cam kết của tổ chức tài chính mà là tổ chức tài chính đó có thực hiện được lời cam kết đó hay không.
   <br>Trong bốn cách đầu tư trên thì cần phải có một số vốn đáng kể để làm theo cách thứ nhất và cách thứ ba, để làm theo cách thứ hai và cách thứ tư thì chỉ cần <a href="https://lhboi.name.vn/huu-ich/cau-chuyen/uoc-mo-thanh-ti-phu">tiết kiệm mỗi ngày từ 33.000₫ trở lên</a>. Các bạn thử dùng Google để tìm những <a rel="nofollow" href="https://www.google.com/search?hl=en&site=imghp&tbm=isch&source=hp&biw=1920&bih=946&q=investment&oq=investment&gs_l=img.3..0l10.1649.3878.0.4785.10.6.0.4.4.0.100.396.5j1.6.0....0...1ac.1.64.img..0.10.413.pkAFd_i0gA0" target='_blank'>hình về đầu tư</a> sẽ thấy phần lớn các hình đều chỉ có tiền lẻ.</p>
 <!-- AMP In-article 1 -->
@@ -371,8 +371,8 @@ data-ad-slot="3830899615">
   Nếu giá cổ phiếu đó lên đúng như A đoán thì A bán đi lấy tiền trả nợ xong còn dư tiền lời, lời nhiều hơn là chỉ mua bán với 100 triệu đồng.<br />
   Nếu giá cổ phiếu xuống, giá trị cổ phiếu thế chấp không còn đủ an toàn cho số tiền A nợ, các ngân hàng sẽ đòi A trả bớt nợ, nhưng A đâu còn tiền để trả, buộc các ngân hàng phải đem bán bớt cổ phiếu của A để lấy tiền giảm nợ, hàng loạt các ngân hàng cùng đem bán một loại cổ phiếu sẽ làm giá của cổ phiếu đó giảm thêm, vậy là ngân hàng phải bán thêm… như một vòng xoáy làm cho số cổ phiếu của A cứ giảm dần và giá cổ phiếu cũng giảm đến mức lỗ vốn nặng.<br>
   Có trường hợp còn liều lĩnh đem nhà đi cầm cố để vay nặng lãi, khi cổ phiếu xuống giá không thể bán (dù bán lỗ cũng không ai mua) sẽ có đám tới lấy nhà xiết nợ.<br>
-  Nếu không dùng đòn bẩy thì <a href="de-tien-vao-dau.html">đầu tư cổ phiếu đúng cách</a> không bao giờ mất vốn, đôi lúc giá cổ phiếu có giảm rồi sẽ lên lại, về dài hạn sẽ lời.</p>
-  <p><span class="tmark">Thông tin mới năm 2018</span>, rất nhiều tổ chức trong nước làm đại lý cho nước ngoài dụ người Việt Nam đầu cơ chứng khoán phái sinh ở Mỹ. Đầu cơ chứng khoán phái sinh là một dạng cá cược, dự đoán giá cổ phiếu sắp lên hay sắp xuống để kiếm lời. Công cụ chứng khoán phái sinh được thiết kế để những người đầu cơ chứng khoán giảm bớt rủi ro bằng cách <a href="/y-kien/bat-ca-hai-tay.html">bắt cá hai tay</a>.</br>
+  Nếu không dùng đòn bẩy thì <a href="de-tien-vao-dau">đầu tư cổ phiếu đúng cách</a> không bao giờ mất vốn, đôi lúc giá cổ phiếu có giảm rồi sẽ lên lại, về dài hạn sẽ lời.</p>
+  <p><span class="tmark">Thông tin mới năm 2018</span>, rất nhiều tổ chức trong nước làm đại lý cho nước ngoài dụ người Việt Nam đầu cơ chứng khoán phái sinh ở Mỹ. Đầu cơ chứng khoán phái sinh là một dạng cá cược, dự đoán giá cổ phiếu sắp lên hay sắp xuống để kiếm lời. Công cụ chứng khoán phái sinh được thiết kế để những người đầu cơ chứng khoán giảm bớt rủi ro bằng cách <a href="/y-kien/bat-ca-hai-tay">bắt cá hai tay</a>.</br>
   Những người bị dụ sẽ gặp rủi ro về mặt pháp lý đó là vi phạm quy định quản lý ngoại tệ của nhà nước khi giao tiền cho đại lý (qua kênh chuyển tiền điện tử Ngân Lượng) và để đại lý chuyển tiền ra nước ngoài một cách bất hợp pháp. Khi đại lý bị xử lý về mặt pháp luật thì tiền của người tham gia sẽ mất hết. Các đại lý rất khéo léo khi dùng Ngân Lượng để nhận tiền vì họ thiết kế một trang web riêng giả bộ như là của nước ngoài, người tham gia không ngờ rằng tiền của mình chuyển đến đại lý trong nước.</p>
 <!-- AMP In-article 1 -->
 <amp-ad
@@ -407,9 +407,9 @@ data-ad-slot="3830899615">
 
   <div class="todiscuss">
     Các bài liên quan:
-    <br>* <a href="dung-so-dau-tu.html">Đừng sợ đầu tư</a>
-    <br>* <a href="dau-tu-co-phieu/quy-dau-tu.html">Tìm hiểu về quỹ đầu tư</a>
-    <br>* <a href="de-tien-vao-dau.html">Kết quả đầu tư cổ phiếu dài hạn</a>
+    <br>* <a href="dung-so-dau-tu">Đừng sợ đầu tư</a>
+    <br>* <a href="dau-tu-co-phieu/quy-dau-tu">Tìm hiểu về quỹ đầu tư</a>
+    <br>* <a href="de-tien-vao-dau">Kết quả đầu tư cổ phiếu dài hạn</a>
     <br>Mọi ý kiến thảo luận xin ghi vào các trang: <a href="https://twitter.com/GiauCham/status/1132937775022428160" target="_blank">Twitter</a> hoặc <a href="https://www.facebook.com/lamgiauchacchan/posts/376065072559107" rel="nofollow" target="_blank">Facebook</a>
   </div>
 
