--- a/huu-ich/de-tien-vao-dau-2.html
+++ b/huu-ich/de-tien-vao-dau-2.html
@@ -167,8 +167,8 @@ div.footer { font-size: 80%; color: red; text-align: center; }
                 <span></span>
             </button>
   <h3 class="myheader"><a href='/'>Giới-thiệu</a></h3>
-    <a href='/home/about.html'>Thân-thế</a><br>
-    <a href='/home/cv.html'>Thành-tích</a><br>
+    <a href='/home/about'>Thân-thế</a><br>
+    <a href='/home/cv'>Thành-tích</a><br>
   <h3 class="myheader"><a href='/huu-ich/'>Hữu-ích</a></h3>
 
       <h4 class="myheader"><a href='/huu-ich/ke-hoach-tai-chinh/'>Lập-kế-hoạch-tài-chính</a></h4>
@@ -190,7 +190,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 
   <h3 class="myheader">Danh mục</h3>
     <a href='/download/'>Download</a><br>
-    <a href='/sitemap.html'>Mục lục</a>
+    <a href='/sitemap'>Mục lục</a>
   <h3 class="myheader"></h3>
   <br>
   <br>
@@ -292,19 +292,19 @@ data-ad-slot="3830899615">
     <li>dễ dàng tối đa hoá lợi nhuận</li>
     <li>có thể rút tiền ra bất kỳ lúc nào (dễ hơn bán cổ phiếu)</li>
   </ul>
-  <p>Tất cả các con số trong bài này được lấy từ các báo cáo của chương trình <a href="/kinh-nghiem/may-tinh/gnucash.html">gnucash</a> trên số liệu của gia đình tôi.<br>
-  Ngoài bất động sản và cổ phiếu ra còn có những cách khác để ích luỹ dài hạn. Các cách đó được <a href="tich-luy-dai-han.html">so sánh trong bài viết ở đây</a>.<br>
-  Đầu tư vào cổ phiếu và quỹ đầu tư trong nước còn nhắc nhở tôi <a href="/y-kien/dung-hang-viet-nam.html">dùng hàng Việt Nam</a>. Và tôi cũng biết ơn những người thường xuyên tiêu thụ sản phẩm Vinamilk, Kinh Đô, dùng dịch vụ ngân hàng Eximbank, những người đã đem lại lợi nhuận cho tôi.</p>
-  <div class="center">sang trang <a href="de-tien-vao-dau.html">1</a> - 2 - <a href="de-tien-vao-dau-3.html">3</a></div>
+  <p>Tất cả các con số trong bài này được lấy từ các báo cáo của chương trình <a href="/kinh-nghiem/may-tinh/gnucash">gnucash</a> trên số liệu của gia đình tôi.<br>
+  Ngoài bất động sản và cổ phiếu ra còn có những cách khác để ích luỹ dài hạn. Các cách đó được <a href="tich-luy-dai-han">so sánh trong bài viết ở đây</a>.<br>
+  Đầu tư vào cổ phiếu và quỹ đầu tư trong nước còn nhắc nhở tôi <a href="/y-kien/dung-hang-viet-nam">dùng hàng Việt Nam</a>. Và tôi cũng biết ơn những người thường xuyên tiêu thụ sản phẩm Vinamilk, Kinh Đô, dùng dịch vụ ngân hàng Eximbank, những người đã đem lại lợi nhuận cho tôi.</p>
+  <div class="center">sang trang <a href="de-tien-vao-dau">1</a> - 2 - <a href="de-tien-vao-dau-3">3</a></div>
 
   <div class="todiscuss">
     Các bài liên quan:
-    <br>* <a href="dau-tu-co-phieu/quy-dau-tu.html">Tìm hiểu về quỹ đầu tư</a>
+    <br>* <a href="dau-tu-co-phieu/quy-dau-tu">Tìm hiểu về quỹ đầu tư</a>
     <br>* <a href="cac-loai-bao-hiem/">Bảo vệ tài sản trước những bất trắc</a>
-    <br>* <a href="/kinh-nghiem/may-tinh/gnucash.html">Phần mềm quản lý tài sản</a>
-    <br>* <a href="cach-dau-tu.html">Phân biệt những cách đầu tư và đầu cơ</a>
-    <br>* <a href="tich-luy-dai-han.html">So sánh các cách tích luỹ tài sản dài hạn</a>
-    <br>* <a href="/y-kien/dung-hang-viet-nam.html">Ưu tiên dùng hàng Việt Nam</a>
+    <br>* <a href="/kinh-nghiem/may-tinh/gnucash">Phần mềm quản lý tài sản</a>
+    <br>* <a href="cach-dau-tu">Phân biệt những cách đầu tư và đầu cơ</a>
+    <br>* <a href="tich-luy-dai-han">So sánh các cách tích luỹ tài sản dài hạn</a>
+    <br>* <a href="/y-kien/dung-hang-viet-nam">Ưu tiên dùng hàng Việt Nam</a>
     <br>Mọi ý kiến thảo luận xin ghi vào các trang: <a href="https://twitter.com/GiauCham/status/1132938452150829056" target="_blank">Twitter</a> hoặc <a href="https://www.facebook.com/lamgiauchacchan/posts/376059755892972" rel="nofollow" target="_blank">Facebook</a>
   </div>
 <!-- AMP In-article 1 -->
