--- a/huu-ich/de-tien-vao-dau-3.html
+++ b/huu-ich/de-tien-vao-dau-3.html
@@ -167,8 +167,8 @@ div.footer { font-size: 80%; color: red; text-align: center; }
                 <span></span>
             </button>
   <h3 class="myheader"><a href='/'>Giới-thiệu</a></h3>
-    <a href='/home/about.html'>Thân-thế</a><br>
-    <a href='/home/cv.html'>Thành-tích</a><br>
+    <a href='/home/about'>Thân-thế</a><br>
+    <a href='/home/cv'>Thành-tích</a><br>
   <h3 class="myheader"><a href='/huu-ich/'>Hữu-ích</a></h3>
 
       <h4 class="myheader"><a href='/huu-ich/ke-hoach-tai-chinh/'>Lập-kế-hoạch-tài-chính</a></h4>
@@ -190,7 +190,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 
   <h3 class="myheader">Danh mục</h3>
     <a href='/download/'>Download</a><br>
-    <a href='/sitemap.html'>Mục lục</a>
+    <a href='/sitemap'>Mục lục</a>
   <h3 class="myheader"></h3>
   <br>
   <br>
@@ -261,14 +261,14 @@ https://www.lhboi.name.vn/huu-ich/de-tien-vao-dau
     <li>được những chuyên viên tài chính quản lý tiền,</li>
     <li>nhất là bạn không tốn thời gian điều hành doanh nghiệp.</li>
   </ul>
-  <p>Kết quả từ số liệu thực tế hơn 10 năm qua cho thấy <a href="dau-tu-co-phieu/so-tk-hay-dau-tu.html">lợi nhuận của quỹ đầu tư cao hơn ngân hàng</a>.</p>
+  <p>Kết quả từ số liệu thực tế hơn 10 năm qua cho thấy <a href="dau-tu-co-phieu/so-tk-hay-dau-tu">lợi nhuận của quỹ đầu tư cao hơn ngân hàng</a>.</p>
   <div><amp-img alt="Kết quả VFM" src="/data/VFM.png" height="281" width="565" layout="responsive"></amp-img></div>
-  <div class="center">sang trang <a href="de-tien-vao-dau.html">1</a> - <a href="de-tien-vao-dau-2.html">2</a> - 3</div>
+  <div class="center">sang trang <a href="de-tien-vao-dau">1</a> - <a href="de-tien-vao-dau-2">2</a> - 3</div>
 
   <div class="todiscuss">
     Các bài liên quan:
     <br>* <a href="dau-tu-co-phieu/">Một cách đầu tư cổ phiếu ít rủi ro</a>
-    <br>* <a href="dau-tu-co-phieu/so-tk-hay-dau-tu.html">Quỹ đầu tư cho lợi nhuận cao hơn gửi ngân hàng</a>
+    <br>* <a href="dau-tu-co-phieu/so-tk-hay-dau-tu">Quỹ đầu tư cho lợi nhuận cao hơn gửi ngân hàng</a>
     <br>Mọi ý kiến thảo luận xin ghi vào các trang: <a href="https://twitter.com/GiauCham/status/1132938452150829056" target="_blank">Twitter</a> hoặc <a href="https://www.facebook.com/lamgiauchacchan/posts/376059755892972" rel="nofollow" target="_blank">Facebook</a>
   </div>
 <!-- AMP In-article 1 -->
