--- a/huu-ich/de-tien-vao-dau.html
+++ b/huu-ich/de-tien-vao-dau.html
@@ -167,8 +167,8 @@ div.footer { font-size: 80%; color: red; text-align: center; }
                 <span></span>
             </button>
   <h3 class="myheader"><a href='/'>Giới-thiệu</a></h3>
-    <a href='/home/about.html'>Thân-thế</a><br>
-    <a href='/home/cv.html'>Thành-tích</a><br>
+    <a href='/home/about'>Thân-thế</a><br>
+    <a href='/home/cv'>Thành-tích</a><br>
   <h3 class="myheader"><a href='/huu-ich/'>Hữu-ích</a></h3>
 
       <h4 class="myheader"><a href='/huu-ich/ke-hoach-tai-chinh/'>Lập-kế-hoạch-tài-chính</a></h4>
@@ -190,7 +190,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 
   <h3 class="myheader">Danh mục</h3>
     <a href='/download/'>Download</a><br>
-    <a href='/sitemap.html'>Mục lục</a>
+    <a href='/sitemap'>Mục lục</a>
   <h3 class="myheader"></h3>
   <br>
   <br>
@@ -251,7 +251,7 @@ https://www.lhboi.name.vn/huu-ich/de-tien-vao-dau
   </div>
 
   <p>Hẳn là những người có tiền tiết kiệm đang băn khoăn không biết sắp tới nên đưa tiền vào đâu trong tình hình lãi suất huy động vốn ở ngân hàng đang giảm dần.<br>
-  Những người chưa có tiền tiết kiệm thì nên đọc bài <a href="tich-luy.html">tại sao cần phải tiết kiệm</a>.</p>
+  Những người chưa có tiền tiết kiệm thì nên đọc bài <a href="tich-luy">tại sao cần phải tiết kiệm</a>.</p>
 <!-- AMP In-article 1 -->
 <amp-ad
 media="(max-width: 399px)"
@@ -297,12 +297,12 @@ data-ad-slot="3830899615">
     <div><i>Vậy tại sao nhiều người lỗ khi mua cổ phiếu?</i></div>
     <div>Người ta lỗ vì muốn kiếm lời ngay và không theo hai điều 2 và 3. Nếu công ty hoạt động tốt thì tài sản của công ty sẽ tăng và giá trị của mỗi cổ phần sẽ tăng trong dài hạn, nhưng trong từng giai đoạn sẽ có lúc giá cổ phiếu cao hơn hoặc thấp hơn giá trị của cổ phần như trong hình minh hoạ. Nếu mua và bán cổ phiếu trong thời gian ngắn có thể bị lỗ, tôi cũng đã từng bị lỗ như vậy.</div>
   </blockquote>
-  <p>Khi đã xác định được mục tiêu là đầu tư cổ phiếu lâu dài để có lợi nhuận cao hơn gửi tiết kiệm ngân hàng rồi thì việc phải làm là <a href="tich-luy.html">tích luỹ</a> thật nhiều <b>cổ phiếu tốt</b> để 10-20-30 năm sau bán đi lấy tiền dùng. Với một số tiền nhất định, muốn có nhiều cổ phiếu hơn thì hãy mua vào khi giá cổ phiếu xuống.<br>
+  <p>Khi đã xác định được mục tiêu là đầu tư cổ phiếu lâu dài để có lợi nhuận cao hơn gửi tiết kiệm ngân hàng rồi thì việc phải làm là <a href="tich-luy">tích luỹ</a> thật nhiều <b>cổ phiếu tốt</b> để 10-20-30 năm sau bán đi lấy tiền dùng. Với một số tiền nhất định, muốn có nhiều cổ phiếu hơn thì hãy mua vào khi giá cổ phiếu xuống.<br>
   Nhà đầu tư cần có đủ kiến thức để chọn được các cổ phiếu tốt. Cổ phiếu tốt là cổ phiếu của những công ty tốt nhưng giá chưa quá cao. Công ty tốt là công ty tăng trưởng tốt.</p>
-  <div class="center">sang trang 1 - <a href="de-tien-vao-dau-2.html">2</a> - <a href="de-tien-vao-dau-3.html">3</a></div>
+  <div class="center">sang trang 1 - <a href="de-tien-vao-dau-2">2</a> - <a href="de-tien-vao-dau-3">3</a></div>
   <div class="todiscuss">
     Các bài liên quan:
-    <br>* <a href="tich-luy.html">Tích luỹ tiền để đủ sống trọn đời</a>
+    <br>* <a href="tich-luy">Tích luỹ tiền để đủ sống trọn đời</a>
     <br>* <a href="dau-tu-co-phieu/">Một cách đầu tư cổ phiếu ít rủi ro</a>
     <br>Mọi ý kiến thảo luận xin ghi vào các trang: <a href="https://twitter.com/GiauCham/status/1132938452150829056" target="_blank">Twitter</a> hoặc <a href="https://www.facebook.com/lamgiauchacchan/posts/376059755892972" rel="nofollow" target="_blank">Facebook</a>
   </div>
