--- a/huu-ich/hieu-qua-dau-tu.html
+++ b/huu-ich/hieu-qua-dau-tu.html
@@ -167,8 +167,8 @@ div.footer { font-size: 80%; color: red; text-align: center; }
                 <span></span>
             </button>
   <h3 class="myheader"><a href='/'>Giới-thiệu</a></h3>
-    <a href='/home/about.html'>Thân-thế</a><br>
-    <a href='/home/cv.html'>Thành-tích</a><br>
+    <a href='/home/about'>Thân-thế</a><br>
+    <a href='/home/cv'>Thành-tích</a><br>
   <h3 class="myheader"><a href='/huu-ich/'>Hữu-ích</a></h3>
 
       <h4 class="myheader"><a href='/huu-ich/ke-hoach-tai-chinh/'>Lập-kế-hoạch-tài-chính</a></h4>
@@ -190,7 +190,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 
   <h3 class="myheader">Danh mục</h3>
     <a href='/download/'>Download</a><br>
-    <a href='/sitemap.html'>Mục lục</a>
+    <a href='/sitemap'>Mục lục</a>
   <h3 class="myheader"></h3>
   <br>
   <br>
@@ -252,12 +252,12 @@ https://www.lhboi.name.vn/huu-ich/hieu-qua-dau-tu
   </div>
 
   <div class="flright"><div class="right">Hình từ <a href="https://www.dreamstime.com/lngoc25_info" target='_blank'>dreamstime.com</a></div><amp-img alt="Investment growth wealth gold coins chart" src="/images/goldcoingrow.jpg" width="400" height="400" layout="responsive"></amp-img></div>
-  <p>Trước hết, xin khẳng định rằng <strong>mọi người đều có thể đầu tư và cần phải đầu tư</strong>. Đầu tư không phải là một việc cao siêu dành cho những người tài giỏi. Đầu tư bắt đầu từ những việc đơn giản như được nêu ra trong bài <a href="dung-so-dau-tu.html">Đừng sợ chữ đầu tư</a>, và có nhiều cách đầu tư ít đơn giản hơn như đã tóm tắt trong bài <a href="cach-dau-tu.html">Những cách đầu tư</a>.
+  <p>Trước hết, xin khẳng định rằng <strong>mọi người đều có thể đầu tư và cần phải đầu tư</strong>. Đầu tư không phải là một việc cao siêu dành cho những người tài giỏi. Đầu tư bắt đầu từ những việc đơn giản như được nêu ra trong bài <a href="dung-so-dau-tu">Đừng sợ chữ đầu tư</a>, và có nhiều cách đầu tư ít đơn giản hơn như đã tóm tắt trong bài <a href="cach-dau-tu">Những cách đầu tư</a>.
   <p>Đầu tư là một cách gia tăng tài sản. Người ta đánh giá hiệu quả của việc đầu tư qua <b>tỷ suất lợi nhuận hàng năm</b> hay là tốc độ gia tăng tài sản. Trong một số việc đầu tư, việc tính tốc độ gia tăng tài sản rất đơn giản, ví dụ gửi tiết kiệm có kỳ hạn thì biết ngay lãi suất. Nhưng có những vụ đầu tư mà người đầu tư đưa tiền vào nhiều lần và nhận lại tiền nhiều lần trong một thời gian khá dài thì tính tốc độ gia tăng tài sản như thế nào? Nếu tính đơn giản bằng cách lấy tổng thu trừ tổng chi thì ta biết lợi nhuận nhưng con số đó không nói lên yếu tố tốc độ.
   <p>Ví dụ:</p>
   <ol>
     <li>Anh A mua một căn nhà chung cư trả góp hàng tháng đồng thời cho thuê căn nhà đó trong 10 năm rồi bán đi.</li>
-    <li>Anh B gửi tiền vào quỹ đầu tư hàng tháng, sau 10 năm rút ra được một món tiền lớn (<a href="dau-tu-co-phieu/so-tk-hay-dau-tu.html">Sổ tiết kiệm hay quỹ đầu tư</a>)</li>
+    <li>Anh B gửi tiền vào quỹ đầu tư hàng tháng, sau 10 năm rút ra được một món tiền lớn (<a href="dau-tu-co-phieu/so-tk-hay-dau-tu">Sổ tiết kiệm hay quỹ đầu tư</a>)</li>
   </ol>
   Giữa anh A và anh B, ai có tốc độ gia tăng tài sản cao hơn?
 <!-- AMP In-article 1 -->
@@ -286,7 +286,7 @@ data-ad-client="ca-pub-2242556057278004"
 data-ad-slot="3830899615">
 </amp-ad>
 
-  <p>Để tính tốc độ gia tăng tài sản của những vụ đầu tư như vậy, đã có hàm XIRR trong các phần mềm spreadsheet. Cách dùng XIRR rất dễ, xem hướng dẫn trong trang <a href="/kinh-nghiem/may-tinh/ham-tai-chinh.html">Hàm tài chính</a>. Tôi đã dùng hàm XIRR để tính các vụ đầu tư của tôi: cổ phiếu, quỹ đầu tư, nhà chung cư cho thuê, đất nền trong dự án. Kết quả:
+  <p>Để tính tốc độ gia tăng tài sản của những vụ đầu tư như vậy, đã có hàm XIRR trong các phần mềm spreadsheet. Cách dùng XIRR rất dễ, xem hướng dẫn trong trang <a href="/kinh-nghiem/may-tinh/ham-tai-chinh">Hàm tài chính</a>. Tôi đã dùng hàm XIRR để tính các vụ đầu tư của tôi: cổ phiếu, quỹ đầu tư, nhà chung cư cho thuê, đất nền trong dự án. Kết quả:
   <ul>
     <li>trong 15 mã cổ phiếu mà tôi đã mua và giữ dài hạn trong khoảng thời gian 2002-2017 thì một mã cổ phiếu lỗ 16,78%/năm, tất cả 14 mã cổ phiếu còn lại lời từ 4,61%/năm đến 50,27%/năm, tính chung tất cả 15 cổ phiếu thì lời trung bình 25,36%/năm.</li>
     <li>một căn nhà chung cư từ khi bắt đầu đặt tiền mua cuối năm 2004 đến khi hoàn thiện nội thất mất 1 năm, cho thuê được 1 năm rồi bán đi, lời 30,24%/năm</li>
@@ -303,7 +303,7 @@ data-ad-slot="3830899615">
     <li>Quỹ đầu tư dễ thực hiện nhất: chỉ cần vốn từ một triệu đồng, không tốn công</li>
   </ul>
   Hiện nay tôi đang cho thuê một căn nhà liền đất, đi thuê một căn chung cư để ở, để dành tiền trong các quỹ đầu tư để sau này cho con du học và dưỡng già.
-  <p>Các bạn hãy bắt đầu ghi chép mọi khoản đầu tư từ nhỏ đến lớn của chính mình để đánh giá hiệu quả. Đây là <a href="ke-hoach-tai-chinh/dau-tu-dai-han.html">Hướng dẫn cách ghi chép</a>.</p> 
+  <p>Các bạn hãy bắt đầu ghi chép mọi khoản đầu tư từ nhỏ đến lớn của chính mình để đánh giá hiệu quả. Đây là <a href="ke-hoach-tai-chinh/dau-tu-dai-han">Hướng dẫn cách ghi chép</a>.</p> 
 <!-- AMP In-article 1 -->
 <amp-ad
 media="(max-width: 399px)"
@@ -331,15 +331,15 @@ data-ad-slot="3830899615">
 </amp-ad>
 
   <p>P.S.
-  <br>Có thể dùng hàm XIRR để tính tốc độ gia tăng tài sản của các hợp đồng <a href="cac-loai-bao-hiem/">bảo hiểm nhân thọ</a>. Ví dụ hợp đồng bảo hiểm giáo dục có thời hạn từ khi đứa bé chưa đầy tuổi đến năm 22 tuổi, đóng phí 18 năm, để lại mọi khoản <a href="cac-loai-bao-hiem/phi-bao-hiem-nhan-tho.html">bảo tức định kỳ</a> và phiếu tiền mặt để sinh lời, khi đáo hạn hợp đồng rút toàn bộ số tiền sẽ lời trung bình 6,57%/năm. Mức sinh lời đó khá tốt, gần bằng mức gửi tiết kiệm, lại được bảo hiểm nhiều quyền lợi về bệnh nghiêm trọng, trợ cấp nằm viện, miễn nộp phí và trợ cấp hàng năm khi người mua bảo hiểm qua đời.
+  <br>Có thể dùng hàm XIRR để tính tốc độ gia tăng tài sản của các hợp đồng <a href="cac-loai-bao-hiem/">bảo hiểm nhân thọ</a>. Ví dụ hợp đồng bảo hiểm giáo dục có thời hạn từ khi đứa bé chưa đầy tuổi đến năm 22 tuổi, đóng phí 18 năm, để lại mọi khoản <a href="cac-loai-bao-hiem/phi-bao-hiem-nhan-tho">bảo tức định kỳ</a> và phiếu tiền mặt để sinh lời, khi đáo hạn hợp đồng rút toàn bộ số tiền sẽ lời trung bình 6,57%/năm. Mức sinh lời đó khá tốt, gần bằng mức gửi tiết kiệm, lại được bảo hiểm nhiều quyền lợi về bệnh nghiêm trọng, trợ cấp nằm viện, miễn nộp phí và trợ cấp hàng năm khi người mua bảo hiểm qua đời.
   <br>Trong thực tế thì tôi thường rút bảo tức và phiếu tiền mặt ra dùng, việc này làm giảm mức sinh lời trung bình của hợp đồng bảo hiểm, nhưng xét hiệu quả chung của việc tích luỹ thì vẫn tốt vì khi rút tiền từ hợp đồng bảo hiểm tôi tránh được việc rút tiền từ các kênh đầu tư khác có lợi nhuận cao hơn, tức là tài sản của tôi tăng lên nhanh hơn.
 
   <div class="todiscuss">
     Các bài liên quan:
-    <br>* <a href="dung-so-dau-tu.html">Đừng sợ chữ đầu tư</a>
-    <br>* <a href="cach-dau-tu.html">Những cách đầu tư</a>
-    <br>* <a href="/kinh-nghiem/may-tinh/ham-tai-chinh.html">Hàm tài chính</a>
-    <br>* <a href="dau-tu-co-phieu/so-tk-hay-dau-tu.html">Sổ tiết kiệm hay quỹ đầu tư</a>
+    <br>* <a href="dung-so-dau-tu">Đừng sợ chữ đầu tư</a>
+    <br>* <a href="cach-dau-tu">Những cách đầu tư</a>
+    <br>* <a href="/kinh-nghiem/may-tinh/ham-tai-chinh">Hàm tài chính</a>
+    <br>* <a href="dau-tu-co-phieu/so-tk-hay-dau-tu">Sổ tiết kiệm hay quỹ đầu tư</a>
     <br>* <a href="cac-loai-bao-hiem/">Bảo hiểm nhân thọ</a>
   </div>
 
