--- a/huu-ich/lam-phat-loi-song.html
+++ b/huu-ich/lam-phat-loi-song.html
@@ -167,8 +167,8 @@ div.footer { font-size: 80%; color: red; text-align: center; }
                 <span></span>
             </button>
   <h3 class="myheader"><a href='/'>Giới-thiệu</a></h3>
-    <a href='/home/about.html'>Thân-thế</a><br>
-    <a href='/home/cv.html'>Thành-tích</a><br>
+    <a href='/home/about'>Thân-thế</a><br>
+    <a href='/home/cv'>Thành-tích</a><br>
   <h3 class="myheader"><a href='/huu-ich/'>Hữu-ích</a></h3>
 
       <h4 class="myheader"><a href='/huu-ich/ke-hoach-tai-chinh/'>Lập-kế-hoạch-tài-chính</a></h4>
@@ -190,7 +190,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 
   <h3 class="myheader">Danh mục</h3>
     <a href='/download/'>Download</a><br>
-    <a href='/sitemap.html'>Mục lục</a>
+    <a href='/sitemap'>Mục lục</a>
   <h3 class="myheader"></h3>
   <br>
   <br>
@@ -262,7 +262,7 @@ https://www.lhboi.name.vn/huu-ich/lam-phat-loi-song
   </div>
   <p><a href="http://www.investopedia.com/terms/l/lifestyle-inflation.asp?layout=infini&v=5E&orig=1&adtest=5E" target='_blank'>DEFINITION of 'Lifestyle Inflation'</a> Increasing your spending when your income goes up. Lifestyle inflation tends to continue each time someone gets a raise, making it perpetually difficult to get out of debt, save for retirement or meet other big-picture financial goals. Lifestyle inflation is what causes people to get stuck in the rat race of working just to pay the bills.</p>
   <p>Khi thu nhập của gia đình tăng lên thì chi tiêu cũng dễ dàng tăng lên theo. Người ta dễ dàng quyết định đi ăn tiệm hơn, dễ đổi TV, đổi xe mới, đổi điện thoại mới, mua sắm thêm quần áo, đồ chơi cho con... Đó chính là lạm phát lối sống. Trượt giá làm tốn nhiều tiền hơn, mức sống của gia đình tăng lên cũng làm tốn nhiều tiền hơn.</p>
-  <p>Lạm phát lối sống làm cho mọi cố gắng của bạn để được tăng lương chẳng giúp gì cho tương lai gia đình bạn. Bạn vẫn phải làm việc miệt mài đến tuổi về hưu, sau đó sống chật vật với khoản lương hưu ít ỏi. Thật chẳng dễ chịu gì khi mức sống đang tăng dần khi đi làm đột ngột tụt xuống thật thấp khi <a href="tich-luy.html">về hưu</a>.</p>
+  <p>Lạm phát lối sống làm cho mọi cố gắng của bạn để được tăng lương chẳng giúp gì cho tương lai gia đình bạn. Bạn vẫn phải làm việc miệt mài đến tuổi về hưu, sau đó sống chật vật với khoản lương hưu ít ỏi. Thật chẳng dễ chịu gì khi mức sống đang tăng dần khi đi làm đột ngột tụt xuống thật thấp khi <a href="tich-luy">về hưu</a>.</p>
 <!-- AMP In-article 1 -->
 <amp-ad
 media="(max-width: 399px)"
@@ -298,7 +298,7 @@ data-ad-slot="3830899615">
 
   <div class="todiscuss">
     Các bài liên quan:
-    <br>* <a href="tich-luy.html">Tích luỹ tiền để đủ sống trọn đời</a>
+    <br>* <a href="tich-luy">Tích luỹ tiền để đủ sống trọn đời</a>
     <br>* <a href="ke-hoach-tai-chinh/">Lập kế hoạch ổn định tài chính suốt đời thật đơn giản</a>
     <br>Mọi ý kiến thảo luận xin ghi vào các trang: <a href="https://twitter.com/GiauCham/status/1132942005833687041" target="_blank">Twitter</a> hoặc <a href="https://www.facebook.com/lamgiauchacchan/posts/599253660240246" rel="nofollow" target="_blank">Facebook</a>
   </div>
