--- a/huu-ich/tich-luy-2.html
+++ b/huu-ich/tich-luy-2.html
@@ -167,8 +167,8 @@ div.footer { font-size: 80%; color: red; text-align: center; }
                 <span></span>
             </button>
   <h3 class="myheader"><a href='/'>Giới-thiệu</a></h3>
-    <a href='/home/about.html'>Thân-thế</a><br>
-    <a href='/home/cv.html'>Thành-tích</a><br>
+    <a href='/home/about'>Thân-thế</a><br>
+    <a href='/home/cv'>Thành-tích</a><br>
   <h3 class="myheader"><a href='/huu-ich/'>Hữu-ích</a></h3>
 
       <h4 class="myheader"><a href='/huu-ich/ke-hoach-tai-chinh/'>Lập-kế-hoạch-tài-chính</a></h4>
@@ -190,7 +190,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 
   <h3 class="myheader">Danh mục</h3>
     <a href='/download/'>Download</a><br>
-    <a href='/sitemap.html'>Mục lục</a>
+    <a href='/sitemap'>Mục lục</a>
   <h3 class="myheader"></h3>
   <br>
   <br>
@@ -301,7 +301,7 @@ data-ad-slot="3830899615">
   <br />Chưa đủ đâu! Còn phải tính trượt giá nữa. Chỉ cần trượt giá 7% mỗi năm thì sau 10 năm vật giá sẽ đắt gấp đôi, sau 20 năm đắt gấp bốn, sau 30 năm đắt gấp tám lần bây giờ. Như vậy con số ở trên phải nhân lên 8-10 lần nữa. Đó là chưa kể khi về già, tiền thuốc chữa bệnh còn tốn hơn nữa.
   <br />Giả sử bạn đang tiêu mỗi tháng <b>5 triệu đồng</b>. Với mức trượt giá khoảng 7%/ năm, 35 năm sau, bạn phải có <b>12-16 tỉ đồng</b> khi về hưu để đủ sống đến cuối đời mà không phải xin con, không phải đi bán vé số. Có sẵn số tiền đó khi về già, bạn có thể đi tập thể dục buổi sáng ở công viên, đánh cờ tướng với bạn già, đi chụp hình, đi bơi…
   <br />Làm sao để dành được số tiền quá lớn đó? Bạn <b>sẽ</b> có số tiền lớn đó nếu bạn tích luỹ <b>sớm, liên tục</b> và sinh lợi an toàn.</p>
-  <div class="center">sang trang <a href="tich-luy.html">trước</a> - <a href="tich-luy.html">1</a> - 2 - <a href="tich-luy-3.html">3</a> - <a href="tich-luy-4.html">4</a> - <a href="tich-luy-5.html">5</a> - <a href="tich-luy-6.html">6</a> - <a href="tich-luy-3.html">kế</a>
+  <div class="center">sang trang <a href="tich-luy">trước</a> - <a href="tich-luy">1</a> - 2 - <a href="tich-luy-3">3</a> - <a href="tich-luy-4">4</a> - <a href="tich-luy-5">5</a> - <a href="tich-luy-6">6</a> - <a href="tich-luy-3">kế</a>
   </div>
 
   <div class="todiscuss">
