--- a/huu-ich/tich-luy-3.html
+++ b/huu-ich/tich-luy-3.html
@@ -167,8 +167,8 @@ div.footer { font-size: 80%; color: red; text-align: center; }
                 <span></span>
             </button>
   <h3 class="myheader"><a href='/'>Giới-thiệu</a></h3>
-    <a href='/home/about.html'>Thân-thế</a><br>
-    <a href='/home/cv.html'>Thành-tích</a><br>
+    <a href='/home/about'>Thân-thế</a><br>
+    <a href='/home/cv'>Thành-tích</a><br>
   <h3 class="myheader"><a href='/huu-ich/'>Hữu-ích</a></h3>
 
       <h4 class="myheader"><a href='/huu-ich/ke-hoach-tai-chinh/'>Lập-kế-hoạch-tài-chính</a></h4>
@@ -190,7 +190,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 
   <h3 class="myheader">Danh mục</h3>
     <a href='/download/'>Download</a><br>
-    <a href='/sitemap.html'>Mục lục</a>
+    <a href='/sitemap'>Mục lục</a>
   <h3 class="myheader"></h3>
   <br>
   <br>
@@ -250,7 +250,7 @@ https://www.lhboi.name.vn/huu-ich/tich-luy
   </div>
 
   <h2>Khi nào thì bắt đầu tích luỹ?</h2>
-  <p>Hãy tích luỹ ngay khi <a href="cau-chuyen/bat-dau-dau-tu.html">bắt đầu làm ra tiền</a>. Tích luỹ càng sớm tiền càng đẻ ra nhiều tiền theo thời gian.<br>
+  <p>Hãy tích luỹ ngay khi <a href="cau-chuyen/bat-dau-dau-tu">bắt đầu làm ra tiền</a>. Tích luỹ càng sớm tiền càng đẻ ra nhiều tiền theo thời gian.<br>
 Bảng dưới đây cho kết quả tính mức độ tiết kiệm tối thiểu trên thu nhập để có đủ tiền sống khi về già. Bảng này tính cho nhiều trường hợp khác nhau: mức trượt giá, lợi nhuận đầu tư, tuổi bắt đầu tích luỹ. Kết quả cho thấy tại sao cần phải tích luỹ sớm: bắt đầu tích luỹ sớm thì tỉ lệ tiết kiệm trên thu nhập thấp hơn bắt đầu tích luỹ trễ.</p>
   <table class="withborder">
   <tbody>
@@ -410,15 +410,15 @@ data-ad-slot="3830899615">
   Bạn thấy đó, 26% đóng vào Bảo hiểm Xã hội chỉ tương đương kết quả tính toán khi không có trượt giá trong bảng trên thì lương hưu BHXH làm sao đủ sống khi có trượt giá? Chưa kể một sự thật còn đáng ngại hơn nữa là phần nhiều người lao động ở Việt Nam chỉ gửi 26% của chừng một phần tư tới một phần ba thu nhập thật, tức là lương hưu càng trở nên ít ỏi. Nhà nước cũng thấy vấn đề này nên đang bàn với các công ty bảo hiểm nhân thọ đưa ra các kế hoạch <a href="https://lhboi.name.vn/huu-ich/tien-thuong-cuoi-nam" target="_blank">hưu trí tự nguyện</a>. Trong khi chưa có kế hoạch đó thì mỗi người phải tự thực hiện <a href="ke-hoach-tai-chinh/">kế hoạch</a> của riêng mình.</p>
   <p><b>Cột thứ ba</b> là kết quả tính cho trường hợp gần giống thực tế hiện nay: trượt giá 8%/năm và lãi suất tiết kiệm 10%/năm. Trong trường hợp này bạn cần phải tiết kiệm nhiều hơn trường hợp không trượt giá. Nếu bạn bắt đầu tích luỹ ở tuổi 23, bạn cần để dành ít nhất 26% thu nhập của mình cho quỹ hưu trí. Nếu bạn đợi đến khi nuôi con xong, 50 tuổi mới bắt đầu tích luỹ thì bạn chỉ được tiêu 37% thu nhập của mình, để 63% cho 10 năm sau.</p>
   <p>Phần nhiều thanh niên đều nghĩ rằng đến khi lập gia đình rồi mới bắt đầu tiết kiệm. Bạn thử nghĩ xem không có quyết tâm tiết kiệm 26% thu nhập khi còn độc thân năm 23 tuổi, thì làm cách gì mà tiết kiệm được 31,7% thu nhập khi 30 tuổi và đang nuôi con.<br>
-  Để dành tới 26% thu nhập thì nhiều quá! Rất may là có cách để giảm tỉ lệ tiết kiệm trên thu nhập xuống một chút để bạn có thể chi tiêu rộng rãi hơn một chút. Đó là tìm cách cho tiền tiết kiệm sinh lợi nhiều hơn. <b>Cột thứ tư và cột thứ năm</b> cho thấy rằng nếu tiền tiết kiệm có <a href="dau-tu-co-phieu/so-tk-hay-dau-tu.html">lãi suất càng cao</a> thì càng ít phải để dành hơn.</p>
-  <div class="center">sang trang <a href="tich-luy-2.html">trước</a> - <a href="tich-luy.html">1</a> - <a href="tich-luy-2.html">2</a> - 3 - <a href="tich-luy-4.html">4</a> - <a href="tich-luy-5.html">5</a> - <a href="tich-luy-6.html">6</a> - <a href="tich-luy-4.html">kế</a>
+  Để dành tới 26% thu nhập thì nhiều quá! Rất may là có cách để giảm tỉ lệ tiết kiệm trên thu nhập xuống một chút để bạn có thể chi tiêu rộng rãi hơn một chút. Đó là tìm cách cho tiền tiết kiệm sinh lợi nhiều hơn. <b>Cột thứ tư và cột thứ năm</b> cho thấy rằng nếu tiền tiết kiệm có <a href="dau-tu-co-phieu/so-tk-hay-dau-tu">lãi suất càng cao</a> thì càng ít phải để dành hơn.</p>
+  <div class="center">sang trang <a href="tich-luy-2">trước</a> - <a href="tich-luy">1</a> - <a href="tich-luy-2">2</a> - 3 - <a href="tich-luy-4">4</a> - <a href="tich-luy-5">5</a> - <a href="tich-luy-6">6</a> - <a href="tich-luy-4">kế</a>
   </div>
 
   <div class="todiscuss">
     Các bài liên quan:
-    <br>* <a href="cau-chuyen/bat-dau-dau-tu.html">Đầu tư để ổn định tương lai</a>
+    <br>* <a href="cau-chuyen/bat-dau-dau-tu">Đầu tư để ổn định tương lai</a>
     <br>* <a href="ke-hoach-tai-chinh/">Lập kế hoạch ổn định tài chính suốt đời thật đơn giản</a>
-    <br>* <a href="dau-tu-co-phieu/so-tk-hay-dau-tu.html">Quỹ đầu tư cho lợi nhuận cao hơn gửi ngân hàng</a>
+    <br>* <a href="dau-tu-co-phieu/so-tk-hay-dau-tu">Quỹ đầu tư cho lợi nhuận cao hơn gửi ngân hàng</a>
     <br>Mọi ý kiến thảo luận xin ghi vào các trang: <a href="https://twitter.com/GiauCham/status/1132931921963495424" target="_blank">Twitter</a> hoặc <a href="https://www.facebook.com/lamgiauchacchan/posts/375520425946905" rel="nofollow" target="_blank">Facebook</a>
   </div>
 <!-- AMP In-article 1 -->
