--- a/huu-ich/tich-luy-4.html
+++ b/huu-ich/tich-luy-4.html
@@ -167,8 +167,8 @@ div.footer { font-size: 80%; color: red; text-align: center; }
                 <span></span>
             </button>
   <h3 class="myheader"><a href='/'>Giới-thiệu</a></h3>
-    <a href='/home/about.html'>Thân-thế</a><br>
-    <a href='/home/cv.html'>Thành-tích</a><br>
+    <a href='/home/about'>Thân-thế</a><br>
+    <a href='/home/cv'>Thành-tích</a><br>
   <h3 class="myheader"><a href='/huu-ich/'>Hữu-ích</a></h3>
 
       <h4 class="myheader"><a href='/huu-ich/ke-hoach-tai-chinh/'>Lập-kế-hoạch-tài-chính</a></h4>
@@ -190,7 +190,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 
   <h3 class="myheader">Danh mục</h3>
     <a href='/download/'>Download</a><br>
-    <a href='/sitemap.html'>Mục lục</a>
+    <a href='/sitemap'>Mục lục</a>
   <h3 class="myheader"></h3>
   <br>
   <br>
@@ -257,13 +257,13 @@ https://www.lhboi.name.vn/huu-ich/tich-luy
     <li>lớn <b>gấp đôi</b> thu nhập chủ động vào năm bạn 55 tuổi,</li>
     <li>lớn <b>gấp ba</b> thu nhập chủ động vào năm bạn 60 tuổi, mặc dù thu nhập chủ động của bạn đã tăng 17 lần sau 37 năm theo mức trượt giá.</li>
   </ul>
-  <p>Có tiền để dành cũng giống như bạn <a href="dau-tu-co-phieu/quy-dau-tu.html">mở một doanh nghiệp</a>, thuê người làm ra tiền cho bạn, bạn chỉ ngồi đếm tiền.</p>
+  <p>Có tiền để dành cũng giống như bạn <a href="dau-tu-co-phieu/quy-dau-tu">mở một doanh nghiệp</a>, thuê người làm ra tiền cho bạn, bạn chỉ ngồi đếm tiền.</p>
   <div>
     <div class="flright"><amp-img alt="Tích luỹ tài sản thành công" src="/images/taisan-chitieu.png" width="397" height="280" layout="responsive"></amp-img></div>
-    Biểu đồ bên phải minh hoạ một mô hình tích luỹ thành công. Thu nhập và chi tiêu hàng năm, tăng dần theo thời gian, nhưng không tăng nhanh như tài sản tích luỹ. Đường màu xanh lá là tỉ lệ tài sản so với chi tiêu hàng tháng. Thời gian đầu tài sản chỉ bằng vài tháng chi tiêu, thời gian cuối tài sản phải hơn hai trăm tháng chi tiêu, mặc dù mức chi tiêu đã tăng lên mười mấy lần do trượt giá. Đường màu đỏ là mức độ tăng tài sản mỗi năm; thời gian đầu tỉ lệ tăng cao do tài sản còn ít, mức tăng chủ yếu là từ tiền tiết kiệm; thời gian sau tỉ lệ tăng thấp nhưng số tiền rất lớn, chủ yếu là từ <a href="de-tien-vao-dau.html">lợi nhuận đầu tư</a>.
+    Biểu đồ bên phải minh hoạ một mô hình tích luỹ thành công. Thu nhập và chi tiêu hàng năm, tăng dần theo thời gian, nhưng không tăng nhanh như tài sản tích luỹ. Đường màu xanh lá là tỉ lệ tài sản so với chi tiêu hàng tháng. Thời gian đầu tài sản chỉ bằng vài tháng chi tiêu, thời gian cuối tài sản phải hơn hai trăm tháng chi tiêu, mặc dù mức chi tiêu đã tăng lên mười mấy lần do trượt giá. Đường màu đỏ là mức độ tăng tài sản mỗi năm; thời gian đầu tỉ lệ tăng cao do tài sản còn ít, mức tăng chủ yếu là từ tiền tiết kiệm; thời gian sau tỉ lệ tăng thấp nhưng số tiền rất lớn, chủ yếu là từ <a href="de-tien-vao-dau">lợi nhuận đầu tư</a>.
   </div>
   <p>Khi mới lập gia đình, chi tiêu tăng nên tỉ lệ tài sản so với chi tiêu hơi giảm, sau đó tiếp tục tăng cao.</p>
-  <p>Bạn hãy dùng phần mềm quản lý tài sản <a href="/kinh-nghiem/may-tinh/gnucash.html">GnuCash</a> để theo dõi việc tích luỹ của mình. Hãy cố gắng sao cho báo cáo tài sản của bạn giống như đồ thị này.</p>
+  <p>Bạn hãy dùng phần mềm quản lý tài sản <a href="/kinh-nghiem/may-tinh/gnucash">GnuCash</a> để theo dõi việc tích luỹ của mình. Hãy cố gắng sao cho báo cáo tài sản của bạn giống như đồ thị này.</p>
 <!-- AMP In-article 1 -->
 <amp-ad
 media="(max-width: 399px)"
@@ -292,16 +292,16 @@ data-ad-slot="3830899615">
 
   <h2>Tích luỹ cách nào để được lợi nhuận cao?</h2>
   <p>Một số người dùng số tiền tiết kiệm làm vốn tự kinh doanh quy mô nhỏ, có thể sinh lời nhiều hơn lãi suất tiết kiệm ngân hàng đến vài lần, rất tốt! Tuy nhiên việc buôn bán nhỏ không thể phát triển mãi đến quy mô vài chục tỉ đồng mà vẫn giữ nguyên lợi nhuận cao. Do đó luôn luôn cần đến các cách tích luỹ sinh lợi khác. Và một điều cần phải luôn luôn nhớ là không bao giờ để hết trứng trong một giỏ. Để hết vốn liếng vào một chỗ, đến khi thị trường không thuận lợi thì rất nguy. Nên chia tài sản ra nhiều chỗ: chỗ lợi nhuận thấp và rủi ro thấp, chỗ lợi nhuận cao và rủi ro cao.</p>
-  <p>Có hai cách để có <a href="dau-tu-co-phieu/so-tk-hay-dau-tu.html">lợi nhuận cao hơn gửi tiết kiệm</a> ở ngân hàng, đó là đầu tư bất động sản và đầu tư cổ phiếu. Để đầu tư bất động sản thì cần có vốn lớn và nhanh nhạy với thông tin. Đầu tư vào cổ phiếu không đòi hỏi vốn lớn nhưng cũng cần có kiến thức và thông tin, tuy nhiên có cách để đầu tư cổ phiếu dễ dàng hơn, được trình bày <a href="de-tien-vao-dau.html">ở đây</a>. Xem bài này phân tích kỹ hơn về <a href="tich-luy-dai-han.html">các công cụ tích luỹ dài hạn</a>.</p>
-  <p>Dù cho bạn dùng những cách tích luỹ nào, hãy luôn luôn <a href="/kinh-nghiem/may-tinh/gnucash.html">theo dõi tài sản</a> của mình, giá trị tài sản phải tăng nhanh hơn mức trượt giá.</p>
-  <div class="center">sang trang  <a href="tich-luy-3.html">trước</a> - <a href="tich-luy.html">1</a> - <a href="tich-luy-2.html">2</a> - <a href="tich-luy-3.html">3</a> - 4 - <a href="tich-luy-5.html">5</a> - <a href="tich-luy-6.html">6</a> - <a href="tich-luy-5.html">kế</a>
+  <p>Có hai cách để có <a href="dau-tu-co-phieu/so-tk-hay-dau-tu">lợi nhuận cao hơn gửi tiết kiệm</a> ở ngân hàng, đó là đầu tư bất động sản và đầu tư cổ phiếu. Để đầu tư bất động sản thì cần có vốn lớn và nhanh nhạy với thông tin. Đầu tư vào cổ phiếu không đòi hỏi vốn lớn nhưng cũng cần có kiến thức và thông tin, tuy nhiên có cách để đầu tư cổ phiếu dễ dàng hơn, được trình bày <a href="de-tien-vao-dau">ở đây</a>. Xem bài này phân tích kỹ hơn về <a href="tich-luy-dai-han">các công cụ tích luỹ dài hạn</a>.</p>
+  <p>Dù cho bạn dùng những cách tích luỹ nào, hãy luôn luôn <a href="/kinh-nghiem/may-tinh/gnucash">theo dõi tài sản</a> của mình, giá trị tài sản phải tăng nhanh hơn mức trượt giá.</p>
+  <div class="center">sang trang  <a href="tich-luy-3">trước</a> - <a href="tich-luy">1</a> - <a href="tich-luy-2">2</a> - <a href="tich-luy-3">3</a> - 4 - <a href="tich-luy-5">5</a> - <a href="tich-luy-6">6</a> - <a href="tich-luy-5">kế</a>
   </div>
   <div class="todiscuss">
     Các bài liên quan:
-    <br>* <a href="dau-tu-co-phieu/so-tk-hay-dau-tu.html">Quỹ đầu tư cho lợi nhuận cao hơn gửi ngân hàng</a>
-    <br>* <a href="de-tien-vao-dau.html">Kết quả đầu tư cổ phiếu dài hạn</a>
-    <br>* <a href="/kinh-nghiem/may-tinh/gnucash.html">Phần mềm quản lý tài sản</a>
-    <br>* <a href="tich-luy-dai-han.html">So sánh các cách tích luỹ tài sản dài hạn</a>
+    <br>* <a href="dau-tu-co-phieu/so-tk-hay-dau-tu">Quỹ đầu tư cho lợi nhuận cao hơn gửi ngân hàng</a>
+    <br>* <a href="de-tien-vao-dau">Kết quả đầu tư cổ phiếu dài hạn</a>
+    <br>* <a href="/kinh-nghiem/may-tinh/gnucash">Phần mềm quản lý tài sản</a>
+    <br>* <a href="tich-luy-dai-han">So sánh các cách tích luỹ tài sản dài hạn</a>
     <br>Mọi ý kiến thảo luận xin ghi vào các trang: <a href="https://twitter.com/GiauCham/status/1132931921963495424" target="_blank">Twitter</a> hoặc <a href="https://www.facebook.com/lamgiauchacchan/posts/375520425946905" rel="nofollow" target="_blank">Facebook</a>
   </div>
 <!-- AMP In-article 1 -->
